--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "google-map-react": "^2.1.7",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
+    "react-cropper": "^2.1.4",
     "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.4",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
